added FishType DTOs and dotEnv file

--- a/CatchTrackerApi/CatchTrackerApi/appsettings.json
+++ b/CatchTrackerApi/CatchTrackerApi/appsettings.json
@@ -1,12 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=CatchTrackerDB;Username=postgres;Password=23C4B3_qwerty"
+    "DefaultConnection": "Host={DB_HOST};Port={DB_PORT};Database={DB_NAME};Username={DB_USER};Password={DB_PASS}"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
