--- a/CatchTrackerApi/CatchTrackerApi/CatchTrackerApi.csproj
+++ b/CatchTrackerApi/CatchTrackerApi/CatchTrackerApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.12">
       <PrivateAssets>all</PrivateAssets>
@@ -16,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\ServiceInterfaces\" />
+    <Folder Include="Interfaces\RepoInterfaces\" />
     <Folder Include="Mappers\" />
     <Folder Include="MiddleWare\" />
     <Folder Include="Services\" />
