--- a/CatchTrackerApi/CatchTrackerApi/CatchTrackerApi.csproj
+++ b/CatchTrackerApi/CatchTrackerApi/CatchTrackerApi.csproj
@@ -17,9 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\ServiceInterfaces\" />
+    <Folder Include="Controllers\" />
     <Folder Include="MiddleWare\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
