--- a/CatchTrackerApi/CatchTrackerApi/appsettings.json
+++ b/CatchTrackerApi/CatchTrackerApi/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host={DB_HOST};Port={DB_PORT};Database={DB_NAME};Username={DB_USER};Password={DB_PASS}"
   },
+  "JwtSettings": {
+    "SecretKey": "pGm2D$J8@9s!vKqP5r+Yz1WcR#tH4fL7",
+    "Issuer": "CatchTrackerAPI",
+    "Audience": "CatchTrackerClient",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
